--- a/index.html
+++ b/index.html
@@ -1,32 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sumip - Event Agency | Landing Page</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="navbar">
-        <div class="logo">
-            <span class="sumip">Sumip</span>
-        </div>
-        <div class="content">
-            <ul class="main-nav">
-               <li class="nav-links">Home</li> 
-               <li class="nav-links"><select>
-                <option value="Event Planning">Event Planning</option>
-                <option value="Wedding Planning">Wedding Planning</option>
-               </select></li>
-               <li class="nav-links"><select>
-                <option value="Event Planning">Summer Parties</option>
-                <option value="Wedding Planning">Farewell Parties</option>
-               </select></li>
-               <li class="nav-links">pricing</li>
-               <li class="nav-links">FAQ's</li>
-            </ul>
-
-        </div>
+      <div class="logo">
+        <span class="sumip">Sumip</span>
+      </div>
+      <div class="content">
+        <ul class="main-nav">
+          <li class="nav-links">Home</li>
+          <li class="nav-links">
+            <select>
+              <option value="Event Planning">Event Planning</option>
+              <option value="Wedding Planning">Wedding Planning</option>
+            </select>
+          </li>
+          <li class="nav-links">
+            <select>
+              <option value="Event Planning">Summer Parties</option>
+              <option value="Wedding Planning">Farewell Parties</option>
+            </select>
+          </li>
+          <li class="nav-links">pricing</li>
+          <li class="nav-links">FAQ's</li>
+        </ul>
+      </div>
     </div>
-</body>
+  </body>
 </html>
