--- a/index.html
+++ b/index.html
@@ -1,41 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sumip - Event Agency | Landing Page</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <div class="navbar">
-      <div class="logo">
-        <span class="sumip">Sumip</span>
-      </div>
-      <div class="content">
-        <ul class="main-nav">
-          <li class="nav-links">Home</li>
-          <li class="nav-links">
-            <select>
-              <option value="Event Planning">Event Planning</option>
-              <option value="Wedding Planning">Wedding Planning</option>
-            </select>
-          </li>
-          <li class="nav-links">
-            <select>
-              <option value="Event Planning">Summer Parties</option>
-              <option value="Wedding Planning">Farewell Parties</option>
-            </select>
-          </li>
-          <li class="nav-links">pricing</li>
-          <li class="nav-links">FAQ's</li>
-        </ul>
-      </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sumip - Event Agency | Landing Page</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/regular.min.css"
+    integrity="sha512-x3gns+l9p4mIK7vYLOCUoFS2P1gavFvnO9Its8sr0AkUk46bgf9R51D8xeRUwCSk+W93YbXWi19BYzXDNBH5SA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/solid.min.css"
+    integrity="sha512-EHa6vH03/Ty92WahM0/tet1Qicl76zihDCkBnFhN3kFGQkC+mc86d7V+6y2ypiLbk3h0beZAGdUpzfMcb06cMg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/js/all.min.js"
+    integrity="sha512-6BTOlkauINO65nLhXhthZMtepgJSghyimIalb+crKRPhvhmsCdnIuGcVbR5/aQY2A+260iC1OPy1oCdB6pSSwQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+<body>
+  <div class="navbar">
+    <div class="logo">
+      <span class="sumip">Sumip</span>
     </div>
-  </body>
+    <div class="content">
+      <ul class="main-nav">
+        <li class="nav-links">Home</li>
+        <li class="nav-links">
+          <select class="dropdown">
+            <option value="Event Planning">Event Planning</option>
+            <option value="Wedding Planning">Wedding Planning</option>
+          </select>
+        </li>
+        <li class="nav-links">
+          <select class="dropdown d2">
+            <option value="Event Planning">Summer Parties</option>
+            <option value="Wedding Planning">Farewell Parties</option>
+          </select>
+        </li>
+        <li class="nav-links">pricing</li>
+        <li class="nav-links">FAQ's</li>
+      </ul>
+    </div>
+    <div class="buttons">
+      <button class="nav-button" type="button">
+        <i class="fa-solid fa-earth-asia"></i>English
+      </button>
+      <button class="nav-button btn-black" type="button">Register</button>
+    </div>
+  </div>
+  <div class="hero">
+    <div class="center">
+      <div class="features justify-center margin-top">
+        <i class="fa-solid fa-ice-cream"></i>
+        <i class="fa-solid fa-arrow-right"></i>
+
+        <span class="bold">Brightness-Dreams!!</span>
+
+        <!-- <i class="fa-solid fa-arrow-right"></i> -->
+        <!-- <i class="fa-solid fa-candy-cane"></i> -->
+
+        <i class="fa-solid fa-magnifying-glass"></i>
+      </div>
+      <div class="heading justify-center margin-top">
+        <h1><span class="upper-center">Radient Revelries,</span><br /></h1>
+
+      </div>
+      <div class="heading heading1">
+        <h1><span class="upper-center">Sparkle Summer Parties</span><br /></h1>
+      </div>
+      <div class="subtext justify-center margin-top upper-center">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quidem
+        autem<br /> aliquid, deserunt praesentium, deleniti accusantium vitae,
+        voluptas nulla fugit
+      </div>
+      <button class="nav-button btn-black center-button margin-top">
+        Get Started
+        <i class=" arrow fa-solid fa-arrow-right"></i>
+      </button>
+      <div class="subtext2 subtext justify-center margin-top upper-center">
+        <i class="fa-solid fa-triangle-exclamation"></i>
+        Pause or cancel service anytime
+      </div>
+
+    </div>
+  </div>
+  <div class="icons">
+    <i class=" icon1 fa-solid fa-candy-cane"></i>
+    <i class=" icon1 fa-solid fa-triangle-exclamation"></i>
+    <i class="icon1 fa-solid fa-magnifying-glass"></i>
+     <i class="icon1 fa-solid fa-candy-cane"></i>
+    <i class="icon1 fa-solid fa-triangle-exclamation"></i>
+    <i class="icon1 fa-solid fa-magnifying-glass"></i>
+
+
+  </div>
+   <div class="images">
+<img class="image1" src="images/website pic2.jpg" alt="picture not found">
+ <img class="image1" src="images/website pic2.jpg" alt="picture not found">
+<img class="image1" src="images/website pic3.png" alt="picture not found">
+<img class="image1" src="images/website pic2.jpg" alt="picture not found">
+<img class="image1" src="images/website pic3.png" alt="picture not found">
+<img class="image1" src="images/website pic2.jpg" alt="picture not found">
+  </div>
+</body>
+
 </html>
